# odp-ui

./: LICENSE  NOTICE  README.md  pyproject.toml  setup.cfg
odp/ui/: base.py  client.py
odp/ui/base/: __init__.py  api.py  forms.py  templates.py
odp/ui/base/forms/: __init__.py  _base.py  _keywords.py  _packages.py  _search.py  _tags.py  fields.py  validators.py
odp/ui/base/lib/: tags.py  utils.py
odp/ui/base/macros/: catalog.j2  content.j2  controls.j2  editor.j2  foot.j2  forms.j2  home.j2  lib.j2  libraries.html  nav.j2  packages.j2  page.j2  submissions.j2
odp/ui/base/static/: custom.css
odp/ui/base/static/scripts/: catalog.js  controls.js  editor.js  forms.js  maps.js  packages.js
odp/ui/base/static/styles/: custom.css  mims.css
odp/ui/base/templates/: __init__.py  archive_index.html  catalog_index.html  catalog_record.html  catalog_subset.html  layout.html  macros.html  package_detail.html  package_edit.html  package_index.html
odp/ui/base/views/: __init__.py  archive.py  catalog.py  hydra.py  package.py  packages.py  vocabulary.py
odp/ui/lib/archive/: __init__.py  filesystem.py  nextcloud.py  website.py
odp/ui/templates/: layout.html
