[metadata]
name = odp-ui
version = 3.0.0
description = User interface library for Python-based ODP web applications.
long_description = file: README.md
url = https://github.com/SAEON/odp-ui
author = Mark Jacobson
author_email = mark@saeon.ac.za
license = MIT
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find_namespace:
include_package_data = True
python_requires = ~=3.10
install_requires =
    authlib
    flask<3
    flask-login
    redis
    werkzeug<3
    wtforms
